# flipflop

./: .gitignore  README.md
python/: pyproject.toml
python/src/: README.md
python/src/001_demo/: README.md
python/src/001_demo/01_grandmas-lost-password/: example1.txt  expected_example.toml  ff00101.py
python/src/2025_dream-vacation/: README.md
python/src/2025_dream-vacation/01_banana-contest/: expected_example.toml  ff202501.py
python/src/2025_dream-vacation/02_rollercoaster-heights/: expected_example.toml  ff202502.py
python/src/2025_dream-vacation/03_bush-salesman/: expected_example.toml  ff202503.py
python/src/2025_dream-vacation/04_beach-cleanup/: expected_example.toml  ff202504.py
python/src/2025_dream-vacation/05_strange-tunnels/: expected_example.toml  ff202505.py
python/src/2025_dream-vacation/06_bird-spotters/: expected_example.toml  ff202506.py
python/src/2025_dream-vacation/07_hyper-grids/: expected_example.toml  ff202507_bfs.py  ff202507_formula.py
python/src/flipflop/: __main__.py  flipflop.toml
